clusters/cultural-repo-cluster/apps/cultural-repo/environments/production/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cultural-repo-web-production
