clusters/cultural-repo-cluster/apps/cultural-repo/environments/production/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cultural-repo-backend
spec:
  template:
    spec:
      containers:
      - name: cultural-repo-backend
        image: registry.gitlab.com/panos.soilem/comic-registry/cultural-repo/backend:vatopedi-v1.0.4 # {"$imagepolicy": "flux-system:cultural-repo-backend-production"}
