clusters/cultural-repo-cluster/apps/cultural-repo/environments/production/deployment-joai-project.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cultural-repo-joai-project
spec:
  template:
    spec:
      containers:
      - name: cultural-repo-joai-project
        image: registry.gitlab.com/panos.soilem/comic-registry/cultural-repo-joai-project-main/joai-project:1.0.1 # {"$imagepolicy": "flux-system:cultural-repo-joai-project-production"}
