clusters/cultural-repo-cluster/apps/cultural-repo/environments/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cultural-repo
spec:
  template:
    spec:
      containers:
      - name: cultural-repo-web
        image: registry.gitlab.com/panos.soilem/comic-registry/cultural-repo/frontend:skopelos-v1.0.7 # {"$imagepolicy": "flux-system:cultural-repo-frontend-production"}
