clusters/cultural-repo-cluster/apps/cultural-repo/environments/production/ingress-backend-wildcard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cultural-repo-ingress-backend-wildcard
  annotations:
    # https redirect
    traefik.ingress.kubernetes.io/router.middlewares: cultural-repo-web-production-redirect-https-backend-production@kubernetescrd
spec:
  tls:
    - hosts:
        - "*.api.repo.skopelos.gr"
      secretName: cultural-repo-app-tls-backend-wildcard
  rules:
    - host: "*.api.repo.skopelos.gr"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cultural-repo-service-backend
                port:
                  number: 80
          - path: /media/
            pathType: Prefix
            backend:
              service:
                name: nginx-media-server-service
                port:
                  number: 80
