clusters/cultural-repo-cluster/apps/cultural-repo/environments/production/ingress-frontend-wildcard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cultural-repo-ingress-frontend-wildcard
  annotations:
    # https redirect
    traefik.ingress.kubernetes.io/router.middlewares: cultural-repo-web-production-redirect-https-production@kubernetescrd
spec:
  tls:
    - hosts:
      - '*.app.repo.vatopedianheritage.gr'
      secretName: cultural-repo-app-tls-frontend-wildcard
  rules:
  - host: '*.app.repo.vatopedianheritage.gr'
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: cultural-repo-service
              port:
                number: 80
