clusters/cultural-repo-cluster/apps/cultural-repo/environments/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cultural-repo-ingress
  annotations:
    # https redirect
    traefik.ingress.kubernetes.io/router.middlewares: cultural-repo-web-production-redirect-https-production@kubernetescrd,cultural-repo-web-production-redirect-to-app-production@kubernetescrd
    kubernetes.io/ingress.class: traefik
spec:
  tls:
    - hosts:
      - 'app.repo.vatopedianheritage.gr'
      secretName: cultural-repo-app-tls
  rules:
    - host: 'app.repo.vatopedianheritage.gr'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cultural-repo-service
                port:
                  number: 80
